--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,16 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <main>
+    <div class="top-row">
+      <div class="green box"></div>
+      <div class="blue box"></div>
+    </div>
+    <div class="bottom-row">
+      <div class="gray box"></div>
+      <div class="black box"></div>
+      <div class="orange box"></div>
+    </div>
+  </main>
 </body>
 </html>
