--- a/position-exercise.html
+++ b/position-exercise.html
@@ -30,7 +30,10 @@
   <main>
     <img src="images/outerspace_landscape.jpeg">
     <!-- Put the HTML you need to accomplish the design -->
-    <div class="green-box"></div>
+    <div class="green-box">
+      <img src="images/spacecat.png" class="cat-pic">
+      <img src="images/spacedog.png" class="dog-pic">
+    </div>
 
   </main>
 </body>
