--- a/position-exercise.html
+++ b/position-exercise.html
@@ -28,7 +28,7 @@
   </nav>
 
   <main>
-    <img src="images/outerspace_landscape.jpeg">
+    <img src="images/outerspace_landscape.jpeg" class="space-image">
     <!-- Put the HTML you need to accomplish the design -->
     <div class="green-box">
       <img src="images/spacecat.png" class="cat-pic">
